# Chatbot

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  config.example.toml  pyproject.toml  start.sh  update.txt  viewer_signals.yaml
alembic/: env.py  script.py.mako
alembic/versions/: 20260321_0001_initial.py  20260321_0002_run_state_checkpoints.py  20260321_0003_character_cultural_fields.py  20260321_0004_house_state_and_strategic_briefs.py  20260321_0005_true_god_ai_governance.py  20260324_0006_memory_and_packaging_layers.py  20260325_0007_programming_grid_and_ops_layers.py  20260326_0008_timeline_viewer_and_broadcast_layers.py  20260328_0009_chronology_voice_guest_and_canary.py  20260329_0010_inference_schedule_debt_and_adapter.py
docs/: architecture.md  operations.md
scripts/: bootstrap_local.sh  run_dev.sh
src/lantern_house/: __init__.py  __main__.py  cli.py  config.py  logging.py
src/lantern_house/context/: __init__.py  assembler.py
src/lantern_house/db/: __init__.py  base.py  models.py  repository.py  session.py
src/lantern_house/domain/: __init__.py  contracts.py  enums.py
tests/: test_audience_control.py  test_cli_ops.py  test_context_assembler.py  test_failsafe_hotpatch.py  test_governance_layers.py  test_inference_and_story_ops.py  test_new_governance_layers.py  test_ollama_client.py  test_progression.py  test_quality.py  test_recap_service.py  test_recovery.py  test_repository.py  test_runtime_upgrades.py  test_scheduler.py  test_seed_loader.py  test_story_memory_layers.py
youtube_signals/: README.md
(+61 files in other folders)
